# pyai

./: .env.example  .gitignore  .gitignore-pna-additions  CLAUDE.md  Caddyfile  INTELLIGENT_REPORTS_UPGRADE.md  README.md  README2.md  caching_optimization_analysis.md  comprehensive_trace_analysis.md  debug_invalid_url.py  debug_logfire.py  debug_youtube.py  error_handling_centralization_plan.md  evaluation-report-2.md  evaluation-report-3.md  evaluation-report-4.md  evaluation-report-5.md  evaluation-report-6.md  evaluation-report-7.md  evaluation-report-final.md  evaluation_report_aug09.md  fixinglogfiretraces.md  logfire_token_queries.sql  logfire_token_report.py  main.py  minimal_test.py  nextstepsplan.md  optimization_implementation_report.md  pyproject.toml  pytest.ini  query_expansion_duplication_analysis.md  quick_token_report.py  research_pipeline_diagram.html  research_pipeline_diagram.md  research_pipeline_sequence_diagram.md  run_tests.py  runevaluation.md  setup-pna-fix.sh  start-with-proxy.sh  (+12 more)
.serena/: project.yml
evaluation_reports/: comprehensive_pipeline_flow_analysis_20250809_090000.md  comprehensive_system_performance_evaluation_20250808.md  evaluation_report_10_performance_analysis.md  evaluation_report_11_performance_latency_analysis.md  evaluation_report_8_content_cleaning_analysis.md  evaluation_report_9.md  kevineval.md  kevsundaymorning.md  kevtry1.md  mcp_evaluation_logfire_context7_vs_logfire_mcp.md  prd_logfire_nl_to_sql_streamlit_module.md  serena_onboarding_prepare_20250810.md  wind_energy_parallelization_efficiency_analysis_20250810.md  (+4 more)
(+87 files in other folders)
